# animelist

./: .gitignore  .pylintrc  Procfile  README.md  anime_service.py  app.py  database.py  database_service.py  functions.py  import.py  init_db.py  list_service.py  password.py  pyproject.toml  relation_service.py  requirements-alt.txt  requirements.txt  routes.py  schema.sql  tasks.py  user_service.py
animelist/: config.py
animelist/repositories/: anime_repository.py  initialization_repository.py  list_repository.py  user_repository.py
animelist/routes/: anime.py  index.py  profile.py  register.py
animelist/services/: user_service.py
animelist/static/: index.css  profile.css
animelist/templates/: index.html  list.html  profile.html
repositories/: anime_repository.py  initialization_repository.py  list_repository.py  tag_repository.py
services/: user_service.py
src/: app.py  config.py  database.py  init_db.py
src/repositories/: anime_repository.py  initialization_repository.py  relation_repository.py  tag_repository.py  user_repository.py
src/routes/: anime.py  list.py  login.py  logout.py  profile.py  register.py  tags.py  template_filter.py  topanime.py
src/services/: list_service.py
src/static/: layout.css  profile.css  topanime.css
static/: anime.css  animes.css  index.css  layout.css  list.css  login.css  profile.css  register.css  relations.css  tags.css  topanime.css
templates/: anime.html  animes.html  index.html  layout.html  list.html  login.html  profile.html  register.html  relations.html  tags.html  topanime.html
(+6 files in other folders)
