[tool.poetry]
name = "animelist"
version = "0.1.0"
description = ""
authors = ["Juho Röyskö <roysko.juho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
defusedxml = "^0.7.1"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
