[tool.poetry]
name = "animelist"
version = "0.1.0"
description = ""
authors = ["Juho Röyskö <roysko.juho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
defusedxml = "^0.7.1"
Flask-SQLAlchemy = "^3.0.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
python-dotenv = "^1.0.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.1.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"
